--- a/리눅스_스터디.md
+++ b/리눅스_스터디.md
@@ -1,8 +1,29 @@
-CLI : command Line Interface
+CLI : Command Line Interface
 
 맥은 유닉스 기반으로 리눅스와 비슷한 환경으로 구성되어있습니다.
+명령어 뒤에 붙는것은 파라미터 또는 옵션이라고 부릅니다.
 
-- ls -al : 현재 머물고 있는 파일의 목록들을 보자
-- ls -l : 현재 머물고 있는 파일과 디렉토리를 좀 더 자세히 보자
+# 위치
 - pwd : 현재 위치 
+- ls -al : 현재 머물고 있는 파일의 목록들을 보자
+- ls -l : 현재 머물고 있는 파일과 디렉토리를 좀 더 자세히 보자(리스트)
+> drwxr-xr-x: d가 맨앞에 있으므로 디렉토리라는 의미
+
+# 이동
+- cd : change directory (이동)
+- cd .. : 부모 디렉터리로 이동 (상대적으로 위치가 달라진다.)
+> / : 루트 디렉토리  <br>
+> .. : 상대경로  <br>
+> /위치/위치 : 절대경로
+
+# 생성
+- mkdir 디렉터리 : 생성
+
+# 삭제
+- rm 파일명 : 파일 삭제
+- rm -r 디렉터리 : 디렉터리 삭제 (디렉터리안에 있는 모든것을 재귀적으로 삭제한다.)
+
+# 화면 & 파일
 - touch 파일명 : 비어있는 파일 생성
+- clear : 화면 청소
+
