--- a/리눅스_스터디.md
+++ b/리눅스_스터디.md
@@ -27,3 +27,7 @@ CLI : Command Line Interface
 - touch 파일명 : 비어있는 파일 생성
 - clear : 화면 청소
 
+# 도움말
+- mkdir --help : 도움말 (화면을 빠져나가지 않고 간단한 설명)
+- man : 자세한 도움말 (화면을 빠져나가서 설명)
+
