--- a/리눅스_스터디.md
+++ b/리눅스_스터디.md
@@ -5,8 +5,12 @@ CLI : Command Line Interface
 
 # 위치
 - pwd : 현재 위치 
-- ls -al : 현재 머물고 있는 파일의 목록들을 보자
-- ls -l : 현재 머물고 있는 파일과 디렉토리를 좀 더 자세히 보자(리스트)
+- ls : 현재의 파일과 디렉터리의 상태를 체크
+- ls -a : 현재의 [숨기파일]까지 모두 보자
+- ls -l : 현재 머물고 있는 파일과 디렉토리를 좀 더 [자세히] 보자(리스트)
+- ls -al : 현재의 [숨기파일]까지 [자세히] 보자
+- ls -alS : 파일 사이즈에따라서 정렬 (내림차순)
+
 > drwxr-xr-x: d가 맨앞에 있으므로 디렉토리라는 의미
 
 # 이동
@@ -18,6 +22,7 @@ CLI : Command Line Interface
 
 # 생성
 - mkdir 디렉터리 : 생성
+- mkdir -p 디렉터리/디렉터리/디렉터리 : 부모디렉터리를 생성하고 자식 디렉터리를 만든다.
 
 # 삭제
 - rm 파일명 : 파일 삭제
@@ -31,3 +36,7 @@ CLI : Command Line Interface
 - mkdir --help : 도움말 (화면을 빠져나가지 않고 간단한 설명)
 - man : 자세한 도움말 (화면을 빠져나가서 설명)
 
+# 검색
+- / 검색어 : / 입력 후 검색어 입력
+- n : 검색어 위주의 검색
+- q : 나가기
