--- a/리눅스_스터디.md
+++ b/리눅스_스터디.md
@@ -40,3 +40,10 @@ CLI : Command Line Interface
 - / 검색어 : / 입력 후 검색어 입력
 - n : 검색어 위주의 검색
 - q : 나가기
+
+# 복사
+- cp 원본파일위치및파일 복사할파일위치및파일 : cp cp.txt dir1/cp2.txt 
+
+# 파일 이동 & 파일이름 변경
+- mv rename.txt dir1/rename.txt  : 파일 이동
+- mv rename.txt rename2.txt : 파일 이름 변경
