--- a/1. Catalina.md
+++ b/1. Catalina.md
@@ -5,8 +5,10 @@
 2. ssh 계정@IP -p 포트 (ssh id@127.0.0.1 -p 2022) 입력
 3. password 입력 
 4. 이동 : cd /usr/local/share/apache-tomcat-8.0.22/logs/
-5. 실시간 로그확인
-  : tail -f catalina.out 또는 tail -f -c 20000 catalina.out
+5. 로그확인
+> tail -f catalina.out : 실시간 로그 확인<br>
+> tail -n 100000 catalina.out : 최신 몇줄 확인 <br>
+> tail -f -c 20000 catalina.out <br>
 6. 날짜에 따른 로그확인 
   : cat catalina.out 2020-11-04.log
 7. 당일 
