--- a/리눅스_스터디.md
+++ b/리눅스_스터디.md
@@ -3,7 +3,7 @@ CLI : Command Line Interface
 맥은 유닉스 기반으로 리눅스와 비슷한 환경으로 구성되어있습니다.
 명령어 뒤에 붙는것은 파라미터 또는 옵션이라고 부릅니다.
 
-# 위치
+### 위치
 - pwd : 현재 위치 
 - ls : 현재의 파일과 디렉터리의 상태를 체크
 - ls -a : 현재의 [숨기파일]까지 모두 보자
@@ -13,37 +13,59 @@ CLI : Command Line Interface
 
 > drwxr-xr-x: d가 맨앞에 있으므로 디렉토리라는 의미
 
-# 이동
+### 이동
 - cd : change directory (이동)
 - cd .. : 부모 디렉터리로 이동 (상대적으로 위치가 달라진다.)
-> / : 루트 디렉토리  <br>
-> .. : 상대경로  <br>
-> /위치/위치 : 절대경로
+> 루트 디렉토리 : /  <br>
+> 상대경로 : ..  <br>
+> 절대경로 : /위치/위치
 
-# 생성
+### 생성
 - mkdir 디렉터리 : 생성
 - mkdir -p 디렉터리/디렉터리/디렉터리 : 부모디렉터리를 생성하고 자식 디렉터리를 만든다.
 
-# 삭제
+### 삭제
 - rm 파일명 : 파일 삭제
 - rm -r 디렉터리 : 디렉터리 삭제 (디렉터리안에 있는 모든것을 재귀적으로 삭제한다.)
 
-# 화면 & 파일
+### 화면 & 파일
 - touch 파일명 : 비어있는 파일 생성
 - clear : 화면 청소
 
-# 도움말
+### 도움말
 - mkdir --help : 도움말 (화면을 빠져나가지 않고 간단한 설명)
 - man : 자세한 도움말 (화면을 빠져나가서 설명)
 
-# 검색
+### 검색
 - / 검색어 : / 입력 후 검색어 입력
 - n : 검색어 위주의 검색
 - q : 나가기
 
-# 복사
+### 복사
 - cp 원본파일위치및파일 복사할파일위치및파일 : cp cp.txt dir1/cp2.txt 
 
-# 파일 이동 & 파일이름 변경
+### 파일 이동 & 파일이름 변경
 - mv rename.txt dir1/rename.txt  : 파일 이동
 - mv rename.txt rename2.txt : 파일 이름 변경
+
+### sudo (super user do) permission 
+- super user/ root user
+- apt-get install git : 우분투 깃 설치 명령어
+
+### 편집기 (nano, vi)
+- nano
+> cut/ ucut : 복사/붙여넣기
+- vi 
+
+# Package manager
+- ls, mkdir, 앱스토어도 패키지이다 (프로그램이라는 뜻)
+- 리눅스에서는 apt, yum이라는 패키지가 있다.
+
+### apt
+- sudo apt-get update; :최산상태로 목록 업데이트 
+- sudo apt-search htop : htop 프로그램 찾기
+- sudo apt-get install htop : htop 프로그램 설치
+- sudo htop : htop 프로그램 실핼
+- sudo apt-get upgrade htop : 업그레이드
+- sudo apt-get remove htop : 프로그램 삭제
+
