--- a/리눅스_스터디.md
+++ b/리눅스_스터디.md
@@ -69,3 +69,10 @@ CLI : Command Line Interface
 - sudo apt-get upgrade htop : 업그레이드
 - sudo apt-get remove htop : 프로그램 삭제
 
+### 다운로드
+- wget 주소 : 기본이름으로 다운로드
+- wget -O 파일이름 : 파일이름 지정하여 다운로드
+
+### git 사용법 (버전관리 시스템의 카테고리중 하나)
+- sudo apt-get install git : 우분투로 깃 다운로드
+- git clone 주소 디렉토리 : 지정한 디렉토리에 소스코드 복제하기
