--- a/2. 수동배포.md
+++ b/2. 수동배포.md
@@ -13,18 +13,18 @@
 # 수동배포하는 법 2
 1. root권한으로 승격 
 2. 본인 계정에서 sudo su 명령어 입력
-3. skyadmin 계정 변경 : su skyadmin 명령어 입력 (비밀번호 없이 접근 가능)
+3. sadmin 계정 변경 : su sadmin 명령어 입력 (비밀번호 없이 접근 가능)
 4. 톰캣 서비스 종료
-5. bin 폴더 내 shutdown.sh 실행 : (shutdown.sh 및 startup.sh 실행은 skyadmin 계정으로)
+5. bin 폴더 내 shutdown.sh 실행 : (shutdown.sh 및 startup.sh 실행은 sadmin 계정으로)
 6. 30초 대기
 7. apache-tomcat 디렉토리 이동
 8. gotomcat 명령어 입력
 9. webapps 폴더 내에 빌드 결과물을 붙여넣기
-10. 해당 폴더 내 권한 지정 : skyadmin:skyadmin 혹은 skyadmin:SSH_Group 으로 모두 지정
-> 명령어 : chown -R skyadmin:SSH_Group /usr/local/share/apache-tomcat/webapps
-11. skyadmin 계정 확인 또는 변경 : u skyadmin 명령어 입력 (비밀번호 없이 접근 가능)
+10. 해당 폴더 내 권한 지정 : sadmin:skyadmin 혹은 sadmin:SSH_Group 으로 모두 지정
+> 명령어 : chown -R sadmin:SSH_Group /usr/local/share/apache-tomcat/webapps
+11. sadmin 계정 확인 또는 변경 : u sadmin 명령어 입력 (비밀번호 없이 접근 가능)
 12. 톰캣 서비스 실행
-13. bin 폴더 내에 startup.sh을 실행 : (shutdown.sh 및 startup.sh 실행은 skyadmin 계정으로)
+13. bin 폴더 내에 startup.sh을 실행 : (shutdown.sh 및 startup.sh 실행은 sadmin 계정으로)
 
 [참고]
 1. sudo 권한 부여는 담당자 혹은 팀장님 이상부터 부여 가능합니다.
