--- a/2. 수동배포.md
+++ b/2. 수동배포.md
@@ -20,7 +20,7 @@
 7. apache-tomcat 디렉토리 이동
 8. gotomcat 명령어 입력
 9. webapps 폴더 내에 빌드 결과물을 붙여넣기
-10. 해당 폴더 내 권한 지정 : sadmin:skyadmin 혹은 sadmin:SSH_Group 으로 모두 지정
+10. 해당 폴더 내 권한 지정 : sadmin:sadmin 혹은 sadmin:SSH_Group 으로 모두 지정
 > 명령어 : chown -R sadmin:SSH_Group /usr/local/share/apache-tomcat/webapps
 11. sadmin 계정 확인 또는 변경 : u sadmin 명령어 입력 (비밀번호 없이 접근 가능)
 12. 톰캣 서비스 실행
